# base32

./: .clang-tidy  CMakeLists.txt  README.md
.github/: constants.env
.github/pages/: action.yml
.github/template/: README.md
.github/workflows/: ci.yml  template-janitor.yml
doc/: Doxyfile.in
fuzz_test/: CMakeLists.txt
fuzz_test/src/: base32_test.cpp
include/base32/: base32.hpp
src/: CppStaticLib.cpp  base32.cpp
test/: CMakeLists.txt
test/src/: base32_decode_test.cpp  base32_encode_test.cpp  base32_test.cpp
